[metadata]
name = airstack
version = 50.0.0
author = Airstack
author_email = support@airstack.xyz
description = Python sdk for airstack apis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Airstack-xyz/airstack-python-sdk
project_urls =
    Bug Tracker = https://github.com/Airstack-xyz/airstack-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp==3.8.4
    graphql-core==2.3.1

[options.packages.find]
where = src
